更新appicon，不能有透明背景 info.plist里声明使用相册权限

--- a/CNodeJS-Swift/Info.plist
+++ b/CNodeJS-Swift/Info.plist
@@ -36,6 +36,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>详情页查看内容里图片保存时要用到相册权限</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
